# robia-ug

./: .env  .gitignore  Cargo.toml  README.md  build.rs
migrations/: 20260319203140_init.down.sql  20260319203140_init.up.sql
src/: api.rs  auth.rs  consts.rs  files.rs  flutterwave.rs  forms.rs  mail.rs  main.rs  middleware.rs  models.rs  renderer.rs  responses.rs  routes.rs  session.rs  state.rs  utils.rs  workflows.rs
src/static/css/: styles.css  styles.css.map  styles.scss
src/static/js/: main.js
src/templates/: 500.html  base.html  change_password.html  email.html  forgot_password.html  index.html  login.html  subscription_email.html  success.html
