[package]
name = "robia-ug"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
serde = "1.0.228"
tera = "1.20.1"
sqlx = { version = "0.8", features = ["chrono", "macros", "postgres", "runtime-tokio", "time"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "compression-br", "fs", "request-id", "trace"]}
sha2 = "0.10.9"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "std"] }
log = "0.4.29"
lettre = { version = "0.11.20", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
aws-sdk-s3 = "1.128.0"
aws-config = "1.8.15"
rand = "0.10.0"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
regex = "1.12.3"
